# asr-websocket-server

./: LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/workflows/: python-release.yml
awss/: speech_recognition_handler.py
awss/client/: stream_audio_file.py  stream_mic.py  streamlit-mic-demo.py
awss/logger/: logger.py
awss/meta/: streaming_interfaces.py
awss/server/: speech_recognition_server.py  websocket-server.py  websocket_server.py
awss/streaming/: enhanced_speech_frame_detector.py  frames_chunk_policy.py  nemo_streaming.py  silero_vad_model.py  speech_frame_detector.py  speech_recognition_manager.py  stream_manager.py  webrtc_vad_model.py  whisper_streaming.py
docker-images-build/core/: Dockerfile
notebooks/: test-diarization.ipynb
