[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.isort]
profile = "black"
length_sort = true
combine_as_imports = true
force_sort_within_sections = true

[tool.poetry]
name = "awss"
version = "0.0.2"
packages = [
    { include = "awss" }
]
description = "This is the base package for awss"
authors = ["collectiveai <info@collectiveai.io>"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0"  # Updated to a newer version
websocket-client = "1.3.3"
numpy = "^1.21"
librosa = "0.9.2"
webrtcvad = "2.0.10"
pyctcdecode = "0.4.0"
fastapi = "0.79.0"
uvicorn = {extras = ["standard"], version = "0.18.2"}
typer = "0.6.1"
soundfile = "0.10.2"
pyaudio = "0.2.12"

#[tool.poetry.group.nemo]
#optional = true

#[tool.poetry.group.nemo.dependencies]
#nemo_toolkit = {extras = ["asr"], version = "1.10.0"}
# socketio = "^0.2.1"

[tool.poetry.group.whisper]
optional = true

[tool.poetry.group.whisper.dependencies]
 openai-whisper = "^v20231117"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
# awscli = "^1.33.0"
python-dotenv = "^1.0.1"
diskcache = "^5.6.3"
radon = "==5.1.0"
black = "^24.8.0"

[tool.pytest.ini_options]
# addopts="-n4"
testpaths = ["test"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:.*:DeprecationWarning',
]
